replace HashMap with Collections.emptyMap for default actions